# opae-legacy

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
samples/hello_mpf_afu/sw/: CMakeLists.txt
scripts/: test-codingstyle-all.sh
tests/: CMakeLists.txt
tests/coreidle/: CMakeLists.txt  test_coreidle_c.cpp  test_main_c.cpp
tests/fpgad/: test_plugin_fpgad_xfpga_c.cpp
tests/fpgaperf/: CMakeLists.txt  test_fpgaperf_counter_c.cpp
tests/ras/: CMakeLists.txt  test_main_c.cpp
tools/: CMakeLists.txt
tools/coreidle/: CMakeLists.txt  coreidle.c  main.c
tools/extra/pac/fpgabist/dma/: CMakeLists.txt
tools/extra/pac/fpgabist/dma_vc/: CMakeLists.txt
tools/fpgad/: CMakeLists.txt  command_line.c  config_file.c  event_dispatcher_thread.c  events_api_thread.c  fpgad.cfg  monitor_thread.c  monitored_device.c
tools/fpgad/api/: CMakeLists.txt  sysfs.c
tools/fpgad/plugins/fpgad-vc/: CMakeLists.txt  fpgad-vc.c
tools/fpgad/plugins/fpgad-xfpga/: CMakeLists.txt
tools/fpgaperf_counter/: CMakeLists.txt  fpgaperf_counter.c
tools/hssi/: CMakeLists.txt  config_app.cpp  config_main.cpp  e10.cpp  e10.h  e100.cpp  e100.h  e40.cpp  e40.h  eth_ctrl.cpp  loopback.h  loopback_main.cpp
tools/ras/: CMakeLists.txt  main.c
